Add rule test MavenFullRuleStackTest (#17)
* Add rule tests

* Fix test